# rag-frontend-react

./: .gitignore  README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/: crud.py  models.py
backend/app/api/: deps.py
backend/app/api/routes/: login.py  uploads.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: upload.py  user.py
backend/app/models/: upload.py  user.py
backend/app/schemas/: auth.py  common.py  upload.py  user.py
backend/demo/: auth.py  temp.py  upload.py  user.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  theme.jsx  utils.js
frontend/src/components/Chat/: ChatGroupHeader.jsx  ChatMessage.jsx  ChatMessages.jsx  ChatTab.jsx  CollapsibleSidebar.jsx  Navbar.jsx  Sidebar.jsx  Sidebar1.jsx  SidebarChatList.jsx  SidebarContent.jsx  SidebarIcons.jsx  fakedata.js
frontend/src/components/Common/: SearchField.jsx  SidebarFooter.jsx  SidebarLink.jsx  UserMenu.jsx  UserProfile.jsx
frontend/src/components/Dashboard/: Navbar.jsx  PendingDataTable.jsx  Sidebar.jsx
frontend/src/components/ui/: checkbox.jsx  color-mode.jsx  field.jsx  hero-reveal-animation.jsx  password-input.jsx  (+1 more)
frontend/src/constants/: languages.js  roles.js
frontend/src/hooks/: useAuth.js  useCustomToast.js  usePagination.js
frontend/src/pages/: ChatPage.jsx  HomePage.jsx
frontend/src/routes/: _chat-layout.js  _dashboard-layout.js  chat.js  login-staff.js  login.js  register.js  router.jsx
frontend/src/theme/: button.recipe.js  styles.js  tabs.recipe.js
(+59 files in other folders)
