[project]
name = "backend"
version = "0.1.0"
description = "Backend Dependencies Management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "sqlmodel>=0.0.24",
    # passlib==1.7.4 ONLY supports bcrypt==4.0.1
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.15.2", # DB version control and migration
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]
